Bug 382813 - Crash on closing Krita if gmic-qt is still opened
Summary: Crash on closing Krita if gmic-qt is still opened
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: G'Mic for Krita (other bugs)
Version First Reported In: 3.2.0-beta.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-27 17:42 UTC by Alvin Wong
Modified: 2017-11-27 09:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Crash with no filter applied (4.82 KB, text/plain)
2017-07-27 17:42 UTC, Alvin Wong
Details
Crash with filter applied (9.12 KB, text/plain)
2017-07-27 17:43 UTC, Alvin Wong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2017-07-27 17:42:37 UTC
Created attachment 106898 [details]
Crash with no filter applied

Getting two different crashes with no filter applied and filter applied.

No crashes (so far) if gmic-qt is already closed.
Comment 1 Alvin Wong 2017-07-27 17:43:13 UTC
Created attachment 106899 [details]
Crash with filter applied
Comment 2 Rafael Linux User 2017-10-10 11:46:32 UTC
Similar: I opened 2 images. Then I apply a long GMIC filter to one of them. Then, I close the other intact image. After some time, Krita crashes, before GMIC filter ended.
Comment 3 Halla Rempt 2017-11-27 09:22:41 UTC
Git commit b38c7370584dae761d08a1b374e2883268fdd8c6 by Boudewijn Rempt.
Committed on 27/11/2017 at 08:57.
Pushed by rempt into branch 'master'.

Do not crash when closing a view for with gmic-qt is running

M  +1    -2    libs/ui/kis_view_plugin.cpp
M  +2    -1    libs/ui/kis_view_plugin.h
M  +5    -1    plugins/extensions/qmic/QMic.cpp

https://commits.kde.org/krita/b38c7370584dae761d08a1b374e2883268fdd8c6