Do not crash when closing a view for with gmic-qt is running

BUG:382813