libs/ui/kis_view_plugin.cpp
@@ -23,8 +23,7 @@
 #include "operations/kis_operation.h"
 
 KisViewPlugin::KisViewPlugin(QObject* parent)
-    : QObject(parent),
-      m_view(0)
+    : QObject(parent)
 {
     m_view = qobject_cast<KisViewManager*>(parent);
     Q_ASSERT(m_view);
